kube/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  revisionHistoryLimit: 3
  replicas: 6
  selector:
    matchLabels:
      app: auth-api
  template:

    metadata:
      annotations:
        ad.datadoghq.com/auth-api.logs: '[{"source": "kubernetes", "service": "auth-api", "env": "dev"}]'
        ad.datadoghq.com/auth-api.apm: '[{"service_name": "auth-api", "env": "dev"}]'
      labels:
        app: auth-api
    spec:
      imagePullSecrets:
        - name: scw-registry-secret
      containers:
        - name: auth-api
          image: rg.fr-par.scw.cloud/goodfood/auth-api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "1000m"
            limits:
              memory: "128Mi"
              cpu: "2000m"
