kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
      app: auth-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
