kube/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-ingress
  annotations:
    kubernetes.io/ingress.class: traefik # Utilisation de Traefik comme contrôleur d'ingress
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
    - host: dev.goodfood.ovh
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 80
